// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderButton should render active 1`] = `
<button
  onClick={[Function]}
>
  <i
    className="material-icons undefined"
  />
  <p>
    1
  </p>
</button>
`;

exports[`HeaderButton should render in-active 1`] = `
<button
  onClick={[Function]}
>
  <i
    className="material-icons"
  />
  <p>
    1
  </p>
</button>
`;
